Cleanup and remove deprecations (#2)